style(spacing): Fix padding and spacings

--- a/_sass/init.scss
+++ b/_sass/init.scss
@@ -11,3 +11,5 @@ $color-button-fg:       #fff;
 $color-button-bg:       #ff4713;
 $color-button2-fg:      #fff;
 $color-button2-bg:      #222;
+
+$box-shift-top-margin:  -103px;
